--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,16 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
-.main {
-  height: 100%;
+.base {
+  width: 100%;
+}
+
+.container {
   margin-right: 15%;
   margin-left: 15%;
-  margin-top: 0.5%;
-  margin-bottom: 3%;
 }
 
 .header {
