--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ html {
   text-align: center;
   margin-bottom: 20px;
   width: 100%;
+  border: 2px solid black;
 }
 
 .section {
@@ -46,22 +47,8 @@ html {
   border-radius: 20px;
   width: 100%;
   text-align: center;
+  border: 2px solid black;
 }
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  margin: 0;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-  margin: 0 15px;
-}
-
 
 .story {
   background-color: #6d6c50;
@@ -71,34 +58,12 @@ nav a {
   background-color: #606060;
 }
 
-/* ... existing styles ... */
-
 .social {
   background-color: #404040;
 }
 
 .supporters {
   background-color: #404040;
-}
-
-#social-links ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-}
-
-#social-links ul li {
-  margin: 0 10px;
-}
-
-#social-links ul li a img {
-  width: 50px;
-  /* or the size you want */
-  height: auto;
-  border-radius: 50%;
-  /* for rounded icons */
 }
 
 footer {
@@ -108,6 +73,7 @@ footer {
   color: #fff;
   width: 100%;
   border-radius: 20px;
+  border: 2px solid black;
 }
 
 .btn {
@@ -143,4 +109,27 @@ footer {
 
 .smallTxt {
   font-size: 0.75em;
+}
+
+.social-img {
+  border-radius: 50%;
+  padding: 5px 10px;
+}
+
+.leftAlign {
+  text-indent:2em;
+  text-align:justify;
+  text-align-last: left;
+}
+
+a {
+  color: #fff;
+}
+a:visited {
+  color: #cadfb3;
+} 
+
+.mapping {
+  display: inline-block
+  
 }
